# reacnet-scope

./: .gitignore  LICENSE  README.md  pyproject.toml  run_cli.sh  run_dash.sh  run_rng_query.sh  run_rng_query_web.sh  run_web.sh
.github/workflows/: ci.yml  publish.yml
.playwright-cli/: page-2026-07-21T13-00-45-666Z.yml  page-2026-07-21T13-02-04-608Z.yml  page-2026-07-21T13-07-08-223Z.yml  page-2026-07-21T13-07-33-676Z.yml  page-2026-07-21T13-08-16-943Z.yml  page-2026-07-21T13-29-21-207Z.yml  page-2026-07-21T13-32-18-533Z.yml  page-2026-07-21T13-33-09-137Z.yml  page-2026-07-21T13-34-19-790Z.yml  page-2026-07-21T13-34-44-944Z.yml  page-2026-07-21T13-35-38-864Z.yml
deploy/: gunicorn.conf.py  nginx.reacnet-scope.conf.example  reacnet-scope.env.example  reacnet-scope.service.example
docs/: dash_remote_deployment.md
examples/: carbon_number_evolution_demo.py  carbon_number_evolution_minimal.csv  multi_species_sources.example.txt
examples/artifacts/: carbon_number_evolution_demo_plot_data.csv  carbon_number_evolution_demo_summary.json
reacnet_scope/: __init__.py  composition.py  indexes.py  prepare.py  rng_events.py
rng_tools/: __init__.py  batch_compare.py  carbon_plot.py  dir_browser.py  formula.py  io.py  mechanism_verify.py  network.py  observation_network.py  reaction.py  recrossing.py
scripts/: __init__.py  build_route_index.py  build_trajectory_index.py  manage_cache.py  rng_query_cli.py
scripts/webapp/: __init__.py  server.py
scripts/webapp/static/: app.js  index.html  styles.css
scripts/webapp_dash/: __init__.py  app.py  callbacks.py  services.py  wsgi.py
scripts/webapp_dash/assets/: app.css
tests/: test_composition_index.py  test_dash_smoke.py  test_directory_browser.py  test_network_indexes.py  test_online_index_contract.py  test_preparation_management.py  test_reaction_first.py  test_rng_event_outputs.py  test_route_index_persistence.py  test_trajectory_index_persistence.py  test_transition_table.py  test_workflow_services.py
tests/fixtures/reaction_first/: event.route  event.species  reaction.smiles
