[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "reacnet-scope"
version = "0.1.0"
description = "CLI + web toolkit for querying ReacNetGenerator outputs and aligning MD species/pathways with mass-spectrometry interpretation."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "openpyxl>=3.1",
  "rdkit>=2023.9",
]
keywords = ["reacnetgenerator", "reaction-network", "md", "chemistry", "smiles"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Chemistry",
]

[project.optional-dependencies]
plot = [
  "matplotlib>=3.8",
  "scipy>=1.11",
]

[project.scripts]
reacnet-scope = "scripts.rng_query_cli:main"
reacnet-scope-web = "scripts.webapp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["rng_tools", "scripts"]

[tool.hatch.build.targets.sdist]
include = [
  "/README.md",
  "/LICENSE",
  "/pyproject.toml",
  "/uv.lock",
  "/run_cli.sh",
  "/run_web.sh",
  "/run_rng_query.sh",
  "/run_rng_query_web.sh",
  "/examples",
  "/rng_tools",
  "/scripts",
]

[tool.uv]
package = true
