[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "reacnet-scope"
version = "0.1.0"
description = "Interactive post-processing and analysis software for ReacNetGenerator species, reaction events, and reaction networks."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "openpyxl>=3.1",
  "rdkit>=2023.9",
]
keywords = ["reacnetgenerator", "reaction-network", "md", "chemistry", "smiles"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Chemistry",
]

[project.optional-dependencies]
plot = [
  "matplotlib>=3.8",
  "scipy>=1.11",
]
web = [
    "dash[diskcache]>=4,<5",
    "dash-ag-grid>=35,<36",
    "dash-bootstrap-components>=2,<3",
    "dash-cytoscape>=1,<2",
    "matplotlib>=3.8",
    "scipy>=1.11",
]

[project.scripts]
reacnet-scope = "scripts.rng_query_cli:main"
reacnet-scope-web = "scripts.webapp.server:main"
reacnet-scope-web-dash = "scripts.webapp_dash.app:main"
reacnet-scope-prepare = "reacnet_scope.prepare:main"
reacnet-scope-build-trajectory-index = "scripts.build_trajectory_index:main"
reacnet-scope-build-route-index = "scripts.build_route_index:main"
reacnet-scope-cache = "scripts.manage_cache:main"

[tool.hatch.build.targets.wheel]
packages = ["reacnet_scope", "rng_tools", "scripts"]

[tool.hatch.build.targets.sdist]
include = [
  "/README.md",
  "/LICENSE",
  "/pyproject.toml",
  "/uv.lock",
  "/run_cli.sh",
  "/run_web.sh",
  "/run_rng_query.sh",
  "/run_rng_query_web.sh",
  "/examples",
  "/docs",
  "/deploy",
  "/rng_tools",
  "/reacnet_scope",
  "/scripts",
]

[tool.uv]
package = true
